apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.31.0"
  listeners:
  # - name: http-gateway
  #   hostname: "*.njyzy.space"
  #   port: 80
  #   protocol: HTTP
  #   allowedRoutes:
  #     namespaces:
  #       from: All
    # tls:
    #   mode: Terminate
    #   certificateRefs:
    #     - name: homepage-cert   # TLS secret from cert-manager or manually created
  - name: https-gateway
    hostname: "*.njyzy.space"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: gateway-cert   # TLS secret from cert-manager or manually created
